4 files modified, 3 added - Pre Routing

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -14,6 +14,9 @@
     Compartilhar
   </button>
 
+  <app-product-alerts [product]="product" (notify)="onNotify()">    
+  </app-product-alerts>
+
 
 </div>
 
