2 files modified, 2 added

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,7 +2,7 @@
 
 <div *ngFor="let product of products">
   <h3>
-      <a [title]="product.name + ': Saiba mais'">
+      <a [title]="product.name + ': Saiba mais'" [routerLink]="['/products', productId]">
     {{product.name}}
       </a>
   </h3>
