--- a/src/styles.css
+++ b/src/styles.css
@@ -126,8 +126,8 @@ app-top-bar h1 {
 
 .cart-item, .shipping-item {
   width: 100%;
-  min-width: 400px;
-  max-width: 450px;
+  min-width: 90vw;
+  max-width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
