--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,9 @@
 <h3>Carrinho</h3>
 
+<p>
+  <a routerLink="/shipping">Formas de Envio</a>
+</p>
+
 <div class="cart-item" *ngFor="let item of items">
   <p>{{ item.name }}</p>
   <p>{{ item.price | currency }}</p>
