--- a/src/app/shipping/shipping.component.html
+++ b/src/app/shipping/shipping.component.html
@@ -1,1 +1,6 @@
-<h3>Forma de Envio</h3>
+<h3>Custos de Envio</h3>
+
+<div class="shipping-item" *ngFor="let shipping of shippingCosts | async">
+  <span>{{ shipping.type}} </span>
+  <span>{{ shipping.price | currency}} </span>
+</div>
