--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -11,12 +11,12 @@
 <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
   
   <div>
-    <label for="name">Name</label>
+    <label for="name">Nome</label>
     <input id="name" type="text" formControlName="name">
   </div>
 
   <div>
-    <label for="address">Address</label>
+    <label for="address">Endereço</label>
     <input id="address" type="text" formControlName="address">
   </div>
 
